# tpscanner-cli

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  Makefile.env  README.md  best_deal_finder.py  deals_finder.py  index.html  logger.py  mkdocs.yml  objects.inv  price_scanner.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  save_results.py  sitemap.xml  tpscanner.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
about/: index.html
config/: index.html
docs/: about.md  config.md  index.md  io.md  license.md  logger.md  scanner.md  scraper.md  ui.md  utils.md
io/: index.html
license/: index.html
logger/: index.html
scanner/: index.html
scraper/: index.html
search/: search_index.json
tests/: test_scanner.py
tpscanner/: __main__.py  deals_finder.py  price_scanner.py  save_results.py  tpscanner.py
tpscanner/config/: __init__.py  config.ini  config.json  config.py
tpscanner/core/: __init__.py  scanner.py
tpscanner/io/: __init__.py  save_results.py
tpscanner/logger/: __init__.py  logger.py
tpscanner/scaper/: __init__.py  scraper.py
tpscanner/scraper/: __init__.py  scraper.py
tpscanner/ui/: __init__.py  console.py
tpscanner/utils/: __init__.py  utils.py
ui/: index.html
utils/: index.html
