[tool.poetry]
name = "tpscanner"
version = "1.0.0"
description = ""
authors = ["Fabio Calefato <@bateman>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.0.0"
selenium = "^4.16.0"
undetected-chromedriver = "^3.5.4"
openpyxl = "^3.1.2"
rich = "^13.7.0"
pretty-errors = "^1.2.25"

[tool.poetry.scripts]
tpscanner = "tpscanner.tpscanner:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
extend-select = ["I"] 
