[tool.poetry]
name = "TPscanner"
version = "1.1.3"
description = "A Python script that finds the best cumulative and individual deals from Trovaprezzi.it"
authors = ["Fabio Calefato <@bateman>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/bateman/tpscanner-cli"

[tool.poetry.scripts]
tpscanner = "tpscanner.tpscanner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.0.0"
selenium = "^4.16.0"
undetected-chromedriver = "^3.5.4"
openpyxl = "^3.1.2"
rich = "^13.7.0"
pretty-errors = "^1.2.25"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocs-autorefs = "*"
mkdocstrings-python = "*"
markdown-callouts = "*"
pygments = "^2.17.2"
pymdown-extensions = "^10.7.1"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-select = [ "I", "D", "S"]
ignore = [ "D203", "D211", "D213", "D404", "D406", "D407", ]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
addopts = [ "--cov-fail-under=5", "--cov-report=term-missing" ]
